--- a/examples/wysiwyg-editor/index.html
+++ b/examples/wysiwyg-editor/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WYSIWYG Editor</title>
   <script type="module" src="./main.js"></script>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <wysiwyg-editor-example></wysiwyg-editor-example>
